fixed overflow bug

--- a/react-app/src/components/Events/EventDetails.css
+++ b/react-app/src/components/Events/EventDetails.css
@@ -26,7 +26,9 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    min-width: 1024px;
+    justify-content: center;
+    /* margin-right: 30px; *
+    /* padding-right: 60px; */
 }
 
 .event-details-header-date{
@@ -39,6 +41,8 @@
     font-size: 33px;
     font-weight: bold;
     margin-top: 10px;
+    width: 100%;
+    word-wrap: break-word;
     margin-bottom: 10px;
 }
 
@@ -46,6 +50,8 @@
     font-size: 16px;
     margin-top: 10px;
     margin-bottom: 10px;
+    width: 100%;
+    word-wrap: break-word;
     color: grey;
 }
 
@@ -125,7 +131,10 @@
 .event-details-location{
     /* margin-bottom: 10px; */
     margin-top: -12px;
-
+    width: 100%;
+    word-wrap: break-word;
+    align-items: center;
+    justify-content: center;
     font-size: 18px;
     color: grey;
     font-weight: 600;
@@ -135,26 +144,34 @@
     color: grey;
     font-weight: 600;
     margin-top: 5px;
+    width: 100%;
+    word-wrap: break-word;
 }
 
 .event-details-when-and-where-state{
     font-size: 18px;
     color: grey;
     font-weight: 600;
+    width: 100%;
+    word-wrap: break-word;
 }
 
 .when-and-where-header-container{
     display: flex;
     flex-direction: row;
     align-items: center;
-    justify-content: space-evenly;
+    justify-content: center;
 }
 
 .event-details-when-and-where-right{
     display: flex;
     flex-direction: column;
     align-items: center;
+    justify-content: center;
+    width: 50%;
+    word-wrap: break-word;
     margin-top: 5px;
+
 }
 .event-details-when-and-where-container{
     display: flex;
@@ -251,6 +268,7 @@
     padding: 10px;
     border-radius: 10px;
     width: 50%;
+    word-wrap: break-word;
 }
 
 .comment-card{
